src/test/ui/pattern/pattern-error-continue.stderr
error[E0433]: failed to resolve: use of undeclared type or module `E`
  --> $DIR/pattern-error-continue.rs:35:9
   |
LL |         E::V => {}
   |         ^ use of undeclared type or module `E`

error[E0532]: expected tuple struct/variant, found unit variant `A::D`
  --> $DIR/pattern-error-continue.rs:18:9
   |
LL |         A::D(_) => (),
   |         ^^^-
   |            |
   |            help: a tuple variant with a similar name exists: `B`

error[E0023]: this pattern has 3 fields, but the corresponding tuple variant has 2 fields
  --> $DIR/pattern-error-continue.rs:17:9
   |
LL |         A::B(_, _, _) => (),
   |         ^^^^^^^^^^^^^ expected 2 fields, found 3

error[E0308]: mismatched types
  --> $DIR/pattern-error-continue.rs:22:9
   |
LL |     match 'c' {
   |           --- this match expression has type `char`
LL |         S { .. } => (),
   |         ^^^^^^^^ expected char, found struct `S`
   |
   = note: expected type `char`
              found type `S`

error[E0308]: mismatched types
  --> $DIR/pattern-error-continue.rs:30:7
   |
LL |     f(true);
   |       ^^^^ expected char, found bool

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0023, E0308, E0433, E0532.
For more information about an error, try `rustc --explain E0023`.
